updated song lyrics

--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 /* Import, Install, etc. Open Props */
+/* Import, Install, etc. Open Props */
 @import "https://unpkg.com/open-props";
 /* Import of Google Fonts */
 @import url(<link href="https://api.fontshare.com/css?f[]=Tanker@400,700&display=swap" rel="stylesheet">);
@@ -10,21 +11,24 @@
 }
 
 body {
-  background : var(--gradient-24);
- 
-}
+  background: linear-gradient(114.3deg, rgb(19, 126, 57) 0.2%, rgb(8, 65, 91) 68.5%);
+  
+ }
 
 /* Main Container */
 main {
   width: 1000px;
   margin: 0 auto 0 auto;
-  padding: 32px;
+  padding: 18px;
   text-align: center;
+  font-size: 15px; 
   font-family: 'Tanker', sans-serif;
-  background: white; 
-  
- 
-}
+  background: black; 
+  border-radius: var(--radius-blob-2);
+  inline-size: var(--size-26);
+  }
+
+
 
 audio {
   width: 100%;
@@ -33,34 +37,40 @@ audio {
 /* score: 0,0,0,1 */
 h1 {
   text-align: center;
-}
+  }
+
 
 /* score: 0,0,1,1 */
 h1:hover {
-  animation: var(--animation-shake-x);
+  animation: var(--animation-bounce);
 }
 
 h1 a {
   font-family: "Tanker";
-  color: dark blue;
-  text-decoration: none;
+  color: black;
+ font-style: italic;
 }
 
 h1 a:hover {
-  color: var(--blue-6);
+  color: var(--green-6);
 }
 
 /* Snarky Ass Comments */
 span {
   font-family: "chewy";
   font-size: 24px;
+  color: white; 
   padding: 12px;
-  
+  font-color: white; 
   background: rgba(255,255,255,.5);
-  border-radius: var(--radius-blob-3);
+  border-radius: var(--radius-blob-5);
 }
 
 span:hover {
   display: inline-block;
   animation: var(--animation-shake-x);
+}
+
+body {
+  color: white;
 }
